// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getHitokoto Saga should call the hitokotoLoadingError action if the response errors 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "https://sslapi.hitokoto.cn/",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getHitokoto Saga should call the hitokotoLoadingError action if the response errors 2`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`getHitokoto Saga should call the hitokotoLoadingError action if the response errors 3`] = `
Object {
  "done": false,
  "value": "123",
}
`;

exports[`getHitokoto Saga should dispatch the hitokotoLoaded action if it requests the data successfully 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "https://sslapi.hitokoto.cn/",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getHitokoto Saga should dispatch the hitokotoLoaded action if it requests the data successfully 2`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`getHitokoto Saga should dispatch the hitokotoLoaded action if it requests the data successfully 3`] = `
Object {
  "done": false,
  "value": "123",
}
`;
